src/tests/snapshots/lovely__tests__compiler_tests@operators.lv-4.snap
---
source: src/tests/mod.rs
expression: ir_string
input_file: src/tests/source_files/operators.lv
---
ENTRY:
  t0 := !true
  t1 := 3 - 4
  t2 := t1 * 2
  t3 := 3 / 7
  t4 := t3 - 22
