src/tests/snapshots/lovely__tests__compiler_tests@operators.lv.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/operators.lv
---
[
    Token {
        kind: ExclamationMark,
        span: Span {
            start: 16,
            end: 17,
        },
    },
    Token {
        kind: True,
        span: Span {
            start: 17,
            end: 21,
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: 21,
            end: 22,
        },
    },
    Token {
        kind: Minus,
        span: Span {
            start: 24,
            end: 25,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 25,
            end: 26,
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: 26,
            end: 27,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 44,
            end: 45,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 45,
            end: 46,
        },
    },
    Token {
        kind: Minus,
        span: Span {
            start: 47,
            end: 48,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 49,
            end: 50,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 50,
            end: 51,
        },
    },
    Token {
        kind: Asterisk,
        span: Span {
            start: 52,
            end: 53,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 54,
            end: 55,
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: 55,
            end: 56,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 58,
            end: 59,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 59,
            end: 60,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 60,
            end: 61,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 61,
            end: 62,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 62,
            end: 63,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 63,
            end: 64,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 64,
            end: 65,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 65,
            end: 66,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 66,
            end: 67,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 67,
            end: 68,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 68,
            end: 69,
        },
    },
    Token {
        kind: Slash,
        span: Span {
            start: 70,
            end: 71,
        },
    },
    Token {
        kind: Minus,
        span: Span {
            start: 72,
            end: 73,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 73,
            end: 74,
        },
    },
    Token {
        kind: Minus,
        span: Span {
            start: 75,
            end: 76,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 77,
            end: 79,
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: 79,
            end: 80,
        },
    },
]
