src/tests/snapshots/lovely__tests__compiler_tests@primitive_literals.lv-4.snap
---
source: src/tests/mod.rs
expression: ir_string
input_file: src/tests/source_files/primitive_literals.lv
---
ENTRY:
