src/tests/snapshots/lovely__tests__compiler_tests@primitive_literals.lv.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/primitive_literals.lv
---
[
    Token {
        kind: IntLiteral,
        span: Span {
            start: 21,
            end: 22,
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: 22,
            end: 23,
        },
    },
    Token {
        kind: Minus,
        span: Span {
            start: 37,
            end: 38,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 38,
            end: 39,
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: 39,
            end: 40,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 56,
            end: 65,
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: 65,
            end: 66,
        },
    },
    Token {
        kind: True,
        span: Span {
            start: 83,
            end: 87,
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: 87,
            end: 88,
        },
    },
    Token {
        kind: False,
        span: Span {
            start: 90,
            end: 95,
        },
    },
    Token {
        kind: Semicolon,
        span: Span {
            start: 95,
            end: 96,
        },
    },
    Token {
        kind: Unit,
        span: Span {
            start: 112,
            end: 116,
        },
    },
]
