src/tests/snapshots/lovely__tests__compiler_tests@scoping.lv-4.snap
---
source: src/tests/mod.rs
expression: ir_string
input_file: src/tests/source_files/scoping.lv
---
ENTRY:
  x#0 := 7
  t0 := x#0 - 23
  x#1 := t0
  t1 := x#1 + 50
  y#2 := t1
  t2 := y#2 - 2
