src/tests/snapshots/lovely__tests__compiler_tests@variable_decls.lv-3.snap
---
source: src/tests/mod.rs
expression: checked_program
input_file: src/tests/source_files/variable_decls.lv
---
CheckedProgram {
    exprs: [
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "foo",
                value: CheckedExpression {
                    type_id: 0,
                    data: IntLiteral(
                        6,
                    ),
                },
                mutable: false,
                variable_id: 0,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "bar",
                value: CheckedExpression {
                    type_id: 0,
                    data: IntLiteral(
                        7,
                    ),
                },
                mutable: true,
                variable_id: 1,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "baz",
                value: CheckedExpression {
                    type_id: 1,
                    data: BoolLiteral(
                        true,
                    ),
                },
                mutable: true,
                variable_id: 2,
            },
        },
        CheckedExpression {
            type_id: 2,
            data: VariableDecl {
                name: "qux",
                value: CheckedExpression {
                    type_id: 2,
                    data: Unit,
                },
                mutable: false,
                variable_id: 3,
            },
        },
    ],
}
