src/tests/snapshots/lovely__tests__compiler_tests@variable_decls.lv-4.snap
---
source: src/tests/mod.rs
expression: ir_string
input_file: src/tests/source_files/variable_decls.lv
---
ENTRY:
  main#4 := FUN#0
  goto FUN#0

FUN#0:
  foo#0 := 6
  bar#1 := 7
  baz#2 := true
  qux#3 := unit
  exit unit
