src/tests/snapshots/lovely__tests__compiler_tests@variable_decls.lv.snap
---
source: src/tests/mod.rs
expression: tokens
input_file: src/tests/source_files/variable_decls.lv
---
[
    Token {
        kind: Identifier,
        span: Span {
            start: 0,
            end: 4,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 5,
            end: 6,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 6,
            end: 7,
        },
    },
    Token {
        kind: Fun,
        span: Span {
            start: 8,
            end: 11,
        },
    },
    Token {
        kind: LParen,
        span: Span {
            start: 12,
            end: 13,
        },
    },
    Token {
        kind: RParen,
        span: Span {
            start: 13,
            end: 14,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 14,
            end: 15,
        },
    },
    Token {
        kind: LBrace,
        span: Span {
            start: 16,
            end: 17,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 20,
            end: 23,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 24,
            end: 25,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 25,
            end: 26,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 27,
            end: 28,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 32,
            end: 35,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 36,
            end: 37,
        },
    },
    Token {
        kind: SingleEqual,
        span: Span {
            start: 37,
            end: 38,
        },
    },
    Token {
        kind: IntLiteral,
        span: Span {
            start: 39,
            end: 40,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 44,
            end: 47,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 48,
            end: 49,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 50,
            end: 54,
        },
    },
    Token {
        kind: SingleEqual,
        span: Span {
            start: 55,
            end: 56,
        },
    },
    Token {
        kind: True,
        span: Span {
            start: 57,
            end: 61,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 65,
            end: 68,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 69,
            end: 70,
        },
    },
    Token {
        kind: Identifier,
        span: Span {
            start: 71,
            end: 75,
        },
    },
    Token {
        kind: Colon,
        span: Span {
            start: 76,
            end: 77,
        },
    },
    Token {
        kind: Unit,
        span: Span {
            start: 78,
            end: 82,
        },
    },
    Token {
        kind: RBrace,
        span: Span {
            start: 83,
            end: 84,
        },
    },
]
